--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /prjEstructuraG5/build/
 /prjEstructuraG5/dist/
 /COPIAPROYECTO_est-dato/nbproject/private/
+/COPIAPROYECTO_est-dato/build/
+/COPIAPROYECTO_est-dato/dist/
