--- a/COPIAPROYECTO_est-dato/nbproject/project.properties
+++ b/COPIAPROYECTO_est-dato/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=COPIAPROYECTO_est-dato
-main.class=prjestructurag5.JF_menuPrincipal
+main.class=prjestructurag5.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
